Bug 1216615 - Add spacing on devtools-searchbox instead of devtools-searchinput;r=pbrosset

--- a/devtools/client/themes/netmonitor.css
+++ b/devtools/client/themes/netmonitor.css
@@ -298,7 +298,7 @@
 }
 
 .requests-menu-status-icon[code^="1"] {
-  background-color: var(---theme-highlight-blue);
+  background-color: var(--theme-highlight-blue);
 }
 
 .requests-menu-status-icon[code^="2"] {
